--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dubai Logistics & Transport Company | Global Shipping Solutions</title>
     <meta name="description" content="Leading logistics and transport company in Dubai offering LCL, FCL, air freight, road transport, container services, and cross stuffing. Professional moving and shipping solutions worldwide." />
     <meta name="keywords" content="Dubai logistics, transport Dubai, shipping Dubai, LCL, FCL, air freight, container loading, cross stuffing, road transport, local moving Dubai" />
-    <meta name="author" content="Smooth Flow Logistics" />
+  <meta name="author" content="Mars Express" />
     <link rel="canonical" href="https://lovable.dev/projects/fdd6187d-dde6-46e3-bb29-40c8433a08b3" />
 
     <meta property="og:title" content="Dubai Logistics & Transport Company | Global Shipping Solutions" />
