--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dubai Logistics & Transport Company | Global Shipping Solutions</title>
-    <meta name="description" content="Leading logistics and transport company in Dubai offering LCL, FCL, air freight, road transport, container services, and cross stuffing. Professional moving and shipping solutions worldwide." />
-    <meta name="keywords" content="Dubai logistics, transport Dubai, shipping Dubai, LCL, FCL, air freight, container loading, cross stuffing, road transport, local moving Dubai" />
+    <title>Mars Express | Global Logistics & Transport</title>
+    <meta name="description" content="Mars Express — logistics, sea freight, air freight, road transport and customs clearance in Dubai and worldwide." />
+    <meta name="keywords" content="Mars Express, Dubai logistics, transport Dubai, shipping Dubai, LCL, FCL, air freight, container loading, cross stuffing, road transport, local moving Dubai" />
   <meta name="author" content="Mars Express" />
-    <link rel="canonical" href="https://lovable.dev/projects/fdd6187d-dde6-46e3-bb29-40c8433a08b3" />
+    <link rel="canonical" href="https://www.marsexpress.ae" />
 
-    <meta property="og:title" content="Dubai Logistics & Transport Company | Global Shipping Solutions" />
-    <meta property="og:description" content="Leading logistics and transport company in Dubai offering LCL, FCL, air freight, road transport, container services, and cross stuffing. Professional moving and shipping solutions worldwide." />
+    <meta property="og:title" content="Mars Express | Global Logistics & Transport" />
+    <meta property="og:description" content="Mars Express — logistics, sea freight, air freight, road transport and customs clearance in Dubai and worldwide." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/mars-opengraph.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Dubai Logistics & Transport Company" />
-    <meta name="twitter:description" content="Professional logistics and transport solutions in Dubai" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Mars Express | Global Logistics & Transport" />
+    <meta name="twitter:description" content="Mars Express — logistics, sea freight, air freight, road transport and customs clearance in Dubai and worldwide." />
+    <meta name="twitter:image" content="/mars-opengraph.png" />
+    <link rel="icon" href="/marslogo.png" />
+    <meta name="theme-color" content="#1F2937" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
